# jehova

./: .gitignore  CMakeLists.txt  README.md  jehova.pro
src/: avahiservice.cpp  avahiservice.h  canvas.cpp  canvas.h  copts.h  main.cpp  network.cpp  network.h
