cmake_minimum_required(VERSION 3.5)
project (jehova)

set (CMAKE_CXX_STANDARD 11)
set(THREADS_PREFER_PTHREAD_FLAG ON)

find_package(Threads REQUIRED)
INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
PKG_SEARCH_MODULE(SDL2TTF REQUIRED SDL2_ttf>=2.0.0)
PKG_SEARCH_MODULE(AVAHI_CLIENT REQUIRED avahi-client)

include_directories( 
	${CMAKE_CURRENT_SOURCE_DIR}/src/ 
	${SDL2_INCLUDE_DIRS} 
	${SDL2IMAGE_INCLUDE_DIRS}
	${SDL2TTF_INCLUDE_DIRS}
	${AVAHI_CLIENT}
)

FILE(GLOB jehova_CPP 
	"${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

add_executable(jehova ${jehova_CPP})
TARGET_LINK_LIBRARIES(jehova 
	${SDL2_LIBRARIES} 
	${SDL2IMAGE_LIBRARIES}
	${SDL2TTF_LIBRARIES}
	${AVAHI_CLIENT_LIBRARIES}
	Threads::Threads
)

INSTALL(TARGETS jehova DESTINATION local/bin)
SET(CPACK_GENERATOR "DEB;TGZ")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "Blickfeldkurier")
INCLUDE(CPack)
